--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
 <script src="lib/nuxeo.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/dropzone.js"></script>
+<script src="lib/Base64.js"></script>
+
 
 <!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/dropzone.css">
+		<link rel="stylesheet" href="css/basic.css">
+		
 
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		
 <script type="text/javascript">
 var connectInfo={
-	baseURL:"http://localhost:8080/nuxeo",
-	username:"Administrator",
-	password:"Administrator"
+	baseURL:"http://localhost:8080/nuxeo"
+
 }	
 var client = new nuxeo.Client(connectInfo);
 client.schemas(["dublincore", "nuxeo_sales_info","nuxeo_customer_identification"]);
-client.header("x-requested-with", "love");
-browseListOfCustomers();
+browseListOfCustomers();	
 </script>
   <div id="dropScreenshots">
   
